# thomson-profile-regularization

./: LaserSlab_FLASH.h5  LaserSlab_test copy.py  LaserSlab_test.py  dispersion.py  fitting.py  fitting_test.ipynb  fitting_test.py  forward.py  forward_test.py  plasma.py  pyproject.toml  test.ipynb  timing_test.py  utility.py  validation.ipynb
.ipynb_checkpoints/: validation-checkpoint.ipynb
ThomsonScattering/: dispersion.py  fitting.py  forward.py  plasma.py  utility.py
